[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aut"
description = "Python command line interface for interacting with Autonity nodes."
readme = "README.md"
license = "MIT"
keywords = ["autonity", "web3", "rpc", "cli"]
maintainers = [
    { name = "Clearmatics Technologies Ltd", email = "ping@clearmatics.com" },
]
dynamic = ["version"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["autonity{env:AUTPY_VERSION:==3.0.0}", "click==8.1.3"]

[project.urls]
homepage = "https://github.com/autonity/aut"
source = "https://github.com/autonity/aut"
issues = "https://github.com/autonity/aut/issues"

[project.scripts]
aut = "aut.__main__:aut"

[tool.hatch.version]
path = "aut/__version__.py"

[tool.hatch.build]
packages = ["aut"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
description = "The standard dev, build, and test environment"
dependencies = ["mypy"]

[tool.hatch.envs.default.scripts]
test = ["unit-tests", "script-tests", "type-check"]
unit-tests = "python -m unittest discover {args:tests}"
script-tests = [
    "rm -rf test_*",
    "hatch run ./scripts/test_contract",
    "hatch run ./scripts/test_protocol",
    "hatch run ./scripts/test_validator",
    "hatch run ./scripts/test_account",
    "hatch run ./scripts/test_token",
]
type-check = "mypy {args:aut tests}"

[tool.hatch.envs.github]
description = "Develop and build against autonity.py from Github"

[tool.hatch.envs.github.scripts]
build = "hatch build -t wheel"

[tool.hatch.envs.github.env-vars]
AUTPY_VERSION = " @ git+https://github.com/autonity/autonity.py@{env:AUTPY_GIT_COMMIT:develop}"

[tool.hatch.envs.local]
description = "Develop against a local checkout of autonity.py"
post-install-commands = [
    "python -m pip install -q -e {env:AUTPY_LOCAL_PATH:{root:uri}/autonity.py}",
]

[tool.hatch.envs.lint]
description = "Run code linters"
detached = true
dependencies = ["black", "check-wheel-contents", "ruff"]

[tool.hatch.envs.lint.scripts]
all = ["check-code", "check-wheel"]
check-code = ["ruff check {args:.}", "black --check {args:.}"]
check-wheel = [
    "hatch build",
    "check-wheel-contents dist/aut-$(hatch version)-py3-none-any.whl",
]
format = ["black {args:.}", "ruff check --fix --select I {args:.}"]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = "tests/archive"
scripts_are_modules = true
strict_optional = true

[tool.ruff.per-file-ignores]
"/autonity.py" = ["E902"]
